style: fixed layout problems

--- a/src/Pages/CoffeeList.module.css
+++ b/src/Pages/CoffeeList.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   text-align: center;
   color: var(--lightCream);
-  background-image: url('../assets/coffee/coffee.jpg');
+  background-image: url("../assets/coffee/coffee.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -65,6 +65,7 @@
 
   .coffeeListTitle {
     font-size: var(--xl-font-size);
+    text-align: left;
   }
 
   .coffeeText {
@@ -75,11 +76,12 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 4em;
+    margin: 0em 5em;
+    margin-bottom: 7em;
   }
 
   .coffeeList {
     display: grid;
-    margin: 0em 5em;
   }
 
   .aboutUsHeroTitle {
